# Ferris-Click

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: sync-version.mjs
src/: App.css  App.tsx  main.tsx  type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: hwnd.rs  mod.rs  mouse.rs  mouse_listener.rs  utils.rs
src/components/: WindowControls.tsx
src/components/ui/: card.tsx
src/hooks/: useFullWind.ts  useGlobalInput.ts  useKey.ts  useMouseKey.ts  useSystemTheme.ts
src/layout/: edit.tsx  settings.tsx  status.tsx  window.tsx
src/page/: home.tsx
